--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Deploy to Server
 
 # Controls when the workflow will run
 on:
@@ -32,7 +32,20 @@ jobs:
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+        
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.100
+      - name: Install dependencies
+        run: dotnet restore
+      - name: Build
+        run: |
+          cd SAMT-Website
+          dotnet build --configuration Release
+          dotnet publish -c Release
+        
       - name: Deploy with rsync
-        run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/samt-con/
+        run: rsync -avz SAMT-Website/bin/Release/net6.0/publish/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/samt-con/
       - name: Restart SAMT Website
         run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'service samt-con restart'
