--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,6 @@ jobs:
           dotnet publish -c Release
         
       - name: Deploy with rsync
-        run: rsync -avz SAMT-Website/bin/Release/net6.0/publish/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/samt-con/
+        run: rsync -avz -e 'ssh -p 4556' SAMT-Website/bin/Release/net6.0/publish/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/samt-con/
       - name: Restart SAMT Website
         run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'service samt-con restart'
