--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,4 +46,4 @@ jobs:
       - name: Deploy with rsync
         run: rsync -avz -e 'ssh -p 4556 -o StrictHostKeyChecking=no' SAMT-Website/bin/Release/net6.0/publish/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/samt-con/
       - name: Restart SAMT Website
-        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'service samt-con restart'
+        run: ssh -p 4556 ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'service samt-con restart'
