Added database stuff

--- a/.gitignore
+++ b/.gitignore
@@ -701,3 +701,6 @@ obj/
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,csharp,aspnetcore,dotnetcore
+
+# Other
+sensitive-data
