--- a/SAMT-Admin-Panel/SAMT-Admin-Panel.csproj
+++ b/SAMT-Admin-Panel/SAMT-Admin-Panel.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,7 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
-    <PackageReference Include="Radzen.Blazor" Version="3.13.6" />
+    <PackageReference Include="Radzen.Blazor" Version="3.13.7" />
   </ItemGroup>
 
   <ItemGroup>
