Datenbank- und Razor-Komponenten-Updates
.gitignore aktualisiert, um `UpdateDatabaseContextCommand.txt` hinzuzufügen.

Event-Klasse (`Event.cs`):
- Eigenschaften `Date` und `ImageLink` entfernt.
- Neue Sammlungen `EventsDateTimes` und `EventsExhibitorsApplies` hinzugefügt.

SamtWebsiteContext-Klasse (`SamtWebsiteContext.cs`):
- `DbSet`-Eigenschaften für `EventsDateTimes` und `EventsExhibitorsApply` hinzugefügt.
- `OnConfiguring`-Methode geändert, um Passwort aus Datei zu lesen.
- `EventsDateTime`-Entität in `OnModelCreating` konfiguriert.

Razor-Komponenten:
- `BringAndBuy.razor`: `currentEventId`-Initialisierung geändert.
- `Index.razor`, `Pricing.razor`, `Whenwhere.razor`, `NavMenu.razor`: `DbContext`-Initialisierungen entfernt und durch `CascadingParameter`-Eigenschaften ersetzt.
- `Index.razor`: Countdown-Logik angepasst.
- `Whenwhere.razor`: Anzeige der Event-Daten angepasst.
- `MainLayout.razor`: `DbContext`-Initialisierung hinzugefügt und `CascadingValue`-Komponenten um `NavMenu` und `Body` hinzugefügt.

Neue Datei `EventsDateTime.cs` hinzugefügt, die die `EventsDateTime`-Entität definiert.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+UpdateDatabaseContextCommand.txt
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,csharp,aspnetcore,dotnetcore
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,csharp,aspnetcore,dotnetcore
